Fix long word overflow
Closes #163

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -39,6 +39,7 @@ body
   display: flex
   flex-direction: column
   min-height: 100%
+  overflow-wrap: break-word
 
   p
     hyphens(auto)
